<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:cardCornerRadius="20sp"
        app:layout_constraintBottom_toTopOf="@+id/TickerInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:layout_marginBottom="168dp"
        android:elevation="@dimen/small_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:background="@color/light_blue"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/PortfolioRelative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/PortfolioTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="left"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    android:text="Portfolio"
                    android:textColor="@color/material_light_primary_text"
                    android:textSize="@dimen/medium_text_size"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/addStockPortfolio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@color/light_blue"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_baseline_add_circle_24">

                </androidx.appcompat.widget.AppCompatImageButton>
            </RelativeLayout>

            <View
                android:id="@+id/delimiterPortfolio"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/PortfolioRelative"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/delimiterPortfolio">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/PortfolioRV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TickerInputLayout"
        style="@style/Widget.Stocks.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TickerInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Search a stock"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintTop_toTopOf="@+id/TickerInputLayout"
            tools:layout_editor_absoluteX="0dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:elevation="@dimen/small_elevation"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textButton">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_blue"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/Holdings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:text="@string/holdings"
                android:textColor="@color/material_light_primary_text"
                android:textSize="@dimen/medium_text_size"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="#BED5ED"
                android:onClick="refreshGain"
                android:src="@drawable/ic_baseline_refresh_24"
                android:tint="@color/material_light_primary_text" />

            <TextView
                android:id="@+id/HoldingsValueTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Holdings"
                android:layout_gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:text="0$"
                android:textColor="@color/material_light_primary_text"
                android:textSize="@dimen/medium_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TotalGainTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/HoldingsValueTV"
                android:layout_centerVertical="true"
                android:paddingStart="10dp"
                android:text="@string/total_gain"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/TotalGainNumberTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/HoldingsValueTV"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/Total_Gain_0"
                android:textColor="#f7208f"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/DayGainTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/TotalGainTV"
                android:paddingStart="10dp"
                android:text="@string/day_s_gain"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/DayGainNumberTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/TotalGainTV"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/Day_Gain_0"
                android:textColor="#f7208f"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/textButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:onClick="searchTicker"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/TickerInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>